--- a/untitled7.ipynb
+++ b/untitled7.ipynb
@@ -4,6 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "name": "Assignment1.ipynb",
+      "collapsed_sections": [],
       "authorship_tag": "ABX9TyNAc+CkFPx1PlhdgPXnMUFo",
       "include_colab_link": true
     },
@@ -28,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -92,7 +94,7 @@
         "id": "iiq9uzoVSG7Q",
         "outputId": "d0e26264-da6f-4d9e-dd95-0d53c09ea353"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +125,7 @@
         "id": "dOa7k2MaTvmU",
         "outputId": "f3ac8a78-43b5-4e40-a546-4615d7103c71"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
